카드 애니메이션 개선 : feat : 가이드라인 업데이트 및 예시 생성 파일 업로드 https://github.com/TEAM-ROMROM/RomRom-FE/issues/143

--- a/cursor/prompts/기능_개발_정리_프롬프트.md
+++ b/cursor/prompts/기능_개발_정리_프롬프트.md
@@ -86,10 +86,11 @@ export const Feature = () => {
 - [ ] 성능 검증
 - [ ] 접근성/보안 검토
 
-### .agent/result/ 결과물
-개발 보고서 작성 후 `.agent/result/` 디렉토리에 아래 명명규칙으로 MD 파일을 생성하여 반환해주세요:
+### cursor/result/ 결과물 자동 생성
+기능 개발 완료 후 **자동으로** `cursor/result/` 디렉토리에 아래 명명규칙으로 MD 파일을 생성해야 합니다:
 - 파일명: `feature_<기능명>_<YYYYMMDD>.md`
-- 예시: `feature_user_authentication_20250815.md`
+- 예시: `feature_card_animation_20250825.md`
+- **중요**: 사용자가 요청하지 않아도 개발 완료 시점에 자동으로 생성
 ```
 
 ### 작성 팁
