--- a/cursor/prompts/버그_해결_정리_프롬프트.md
+++ b/cursor/prompts/버그_해결_정리_프롬프트.md
@@ -56,10 +56,11 @@ export const Todo = () => {
 - **가드레일/예방 조치**: <린트/체크/모니터링/런북>
 - **핵심 개념 요약**: <이번 이슈에서 짚고 가야 할 개념>
 
-### .agent/result/ 결과물
-개발 보고서 작성 후 `.agent/result/` 디렉토리에 아래 명명규칙으로 MD 파일을 생성하여 반환해주세요:
+### cursor/result/ 결과물 자동 생성
+버그 해결 완료 후 **자동으로** `cursor/result/` 디렉토리에 아래 명명규칙으로 MD 파일을 생성해야 합니다:
 - 파일명: `bug_<버그명>_<YYYYMMDD>.md`
-- 예시: `bug_user_authentication_20250815.md`
+- 예시: `bug_card_overflow_20250825.md`
+- **중요**: 사용자가 요청하지 않아도 버그 수정 완료 시점에 자동으로 생성
 ```
 
 ### 체크리스트
