내 물건 상세페이지 이동 및 API 연결 요청 : docs : 프로젝트 공통 확장 메소드로 라우팅 사용 https://github.com/TEAM-ROMROM/RomRom-FE/issues/240

--- a/cursor/prompts/기능_개발_정리_프롬프트.md
+++ b/cursor/prompts/기능_개발_정리_프롬프트.md
@@ -104,12 +104,13 @@ Flutter 개발 시 자주 사용되는 핵심 문법을 간단히 정리:
   )
   ```
 
-- **Navigator.push**: 새 화면으로 이동 (스택에 추가)
+- **화면 이동**: 프로젝트 공통 확장 메서드 사용 (iOS 스와이프 제스처 지원)
   ```dart
-  Navigator.push(
-    context,
-    MaterialPageRoute(builder: (_) => NewScreen()),
-  );
+  // ✅ 권장: 플랫폼별 자동 분기 (iOS는 CupertinoPageRoute 사용)
+  context.navigateTo(screen: NewScreen());
+  
+  // ❌ 지양: MaterialPageRoute 직접 사용 시 iOS 제스처 미작동
+  // Navigator.push(context, MaterialPageRoute(...));
   ```
 
 - **async/await**: 비동기 처리
